# sudoku-parallelization

./: .gitignore  README.md  TODO.md  performance.sh
examples/: readme.md  solution_0.csv  solution_1.csv  sudoku_2.csv
examples/16x16/: normalize_sudoku.py  solution_1.csv  solution_2.csv  solution_3.csv  sudoku_1.csv  sudoku_2.csv  sudoku_3.csv  test_1.csv  test_2.csv  test_3.csv
examples/9x9/: script-mp.sh  script-mpi.sh  script-seq.sh  script-tsks.sh  script.sh  solution_4.csv  solution_5.csv  sudoku_1.csv  sudoku_3.csv  sudoku_4.csv  sudoku_4.csv.bckp  sudoku_5.csv  test_1.csv  test_2.csv  test_3.csv  test_4.csv  validate.py
literature/: notes.md
literature/1_sudoku_report_8/: solve_every_sudoku.txt
open_mp_impl/: CMakeLists.txt  constraint_propagation.c  constraint_propagation.h  main.c  time_command.sh
open_mp_tasks_impl/: CMakeLists.txt  main.c  sudoku_grid.c
open_mpi_impl/: CMakeLists.txt  main.c  sudoku_grid.c
performance/: all-perf.sh  mp-perf.sh  mp-task-perf.sh  mpi-perf.sh  results.csv  sequential-perf.sh  visualize_1.py  visualize_2.py
report/laTex/: biblist.bib  main.tex  rsvp.sty
report/laTex/kodovi/: common_forbidden.c  mp_search.c  mp_tasks_search.c  mpi_initial_cp.c  mpi_job_delegation.c  mpi_message_waiting.c  mpi_structures.c  rules_propagation.c  seq_search.c  seq_structures.c
report/laTex/poglavlja/: abstrakt.tex  listinzi.tex  naslovna_strana.tex  paralelna_implementacija.tex  pojmovi_postojeca_resenja.tex  poredjenje_performansi.tex  sekvencijalna_implementacija.tex  uvod.tex  zakljucak.tex
sequential_impl/: CMakeLists.txt  check  main.c  readme.md  sequential_impl  sudoku_1.csv  sudoku_grid.c  sudoku_grid.h  test.sh  time_command.sh  tmp.txt
solution_checker/: go.mod  main.go
